--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Página de Angel</title>
@@ -8,24 +9,35 @@
 
 <body>
 
-  <header>
-	<!-- nav para el menú principal -->
-	<nav>
-	  <ul>
-		<!-- Nos sirve para agregar un logotipo al menu -->
-		<li><a href="index.html">Inicio</a></li>
-		<li><a href="programacion.html">Programación</a></li>
-	  </ul>
-	</nav>
-  </header>
- 
-  <div class="principal">
-	<h1>PAGINA PRINCIPAL DEL SITIO</h1>
-   	<p>Contenido de la página principal del index.html</p>
-	<img src="recursos/imagenes/foto1.png" width="30%" height="30%">
-  </div>
+    <header>
+        <h1>Página principal del sitio</h1>
+        <nav>
+            <ul>
+                <!-- Nos sirve para agregar un logotipo al menu -->
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="programacion.html">Programación</a></li>
+              </ul>
+        </nav>
+    </header>
 
-  <footer>@anesca 2022</footer>
+    <section>
+        <article>
+            <h2>Contenido de la página principal del sitio.</h2>
+            <aside>
+				<img src="recursos/imagenes/foto1.png" width="30%" height="30%">
+                <p>Este es un parte de la primera publicación en blog.</p>
+            </aside>
+        </article>
+
+        <article>
+            <h2>Segunda sección.</h2>
+			<aside>
+				Aquí pondremos el contenido de la segunda sección.
+			</aside>
+        </article>
+    </section>
+
+    <footer>@anesca 2022</footer>
 
 </body>
 </html>
