--- a/programacion.html
+++ b/programacion.html
@@ -8,23 +8,35 @@
 
 <body>
 
-  <header>
-	<!-- nav para el menú principal -->
-	<nav>
-	  <ul>
-		<!-- Nos sirve para agregar un logotipo al menu -->
-		<li><a href="index.html">Inicio</a></li>
-		<li><a href="programacion.html">Programación</a></li>
-	  </ul>
-	</nav>
-  </header>
-	
-  <div class="principal">
-	<h1>PROGRAMACION</h1>
-	   <p>Blog para principiantes para aprender a programar.</p>
-  </div>
-	
-  <footer>@anesca 2022</footer>
+    <header>
+        <h1>Cabecera de la página</h1>
+        <nav>
+            <ul>
+                <!-- Nos sirve para agregar un logotipo al menu -->
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="programacion.html">Programación</a></li>
+              </ul>
+        </nav>
+    </header>
+
+    <section>
+        <article>
+            <h2>PROGRAMACIÓN</h2>
+            <aside>
+				<img style="align-items: center;" src="recursos/imagenes/python.png" width="30%" height="30%">
+                <p><b>Python</b> es un lenguaje de programación de propósito general y alto nivel.
+				Su filosofía de diseño enfatiza la legibilidad del código con el uso de sangría significativa.</p>
+            </aside>
+
+			<aside>
+				<img src="recursos/imagenes/java.png" width="30%" height="30%">
+				<p><b>Java</b> es la plataforma número uno de lenguaje de programación y desarrollo.
+				Reduce costos, acorta los plazos de desarrollo, impulsa la innovación y mejora los servicios de las aplicaciones.</p>
+			</aside>
+		</article>
+    </section>
+
+    <footer>@anesca 2022</footer>
 
 </body>
 </html>
